Bug #34315 et al
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51418 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-04-14-univention-pam.yaml
+++ b/doc/errata/staging/2014-04-14-univention-pam.yaml
@@ -9,6 +9,6 @@ desc: |
   * Kerberos authentication is now limited to non-local accounts with
     UID >= 1000. The limit can be configured through the new Univention
     Configuration Registry variable 'pam/krb5/minimum_uid'.
-  * The mapping of user and group names in the config registry templates was
+  * The mapping of user and group names in the UCR templates was
     not updated in all cases. This has been fixed.
 bug: [34315, 34742]
