--- a/doc/errata/staging/2014-07-01-linux.yaml
+++ b/doc/errata/staging/2014-07-01-linux.yaml
@@ -3,7 +3,7 @@ release: "3.2"
 version: [1, 2]
 scope: ucs_3.2-0-errata3.2-2
 src: linux
-fix: 
+fix: 3.10.11-1.68.201407011355
 desc: |
  The Linux kernel in Univention Corporate Server has been updated to 3.10.46.
  This provides many bugfixes and also addresses the following security
