Adapted autotest-070-update-3.2-to-4.0-master-s3.cfg add files (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51421 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
@@ -48,7 +48,7 @@ command2:
  . utils.sh; run_setup_join
 command3:
 # Update to UCS 4.0
- . utils.sh; upgrade_to_latest
+ . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
 command4:
  . utils.sh; install_ucs_test
@@ -62,4 +62,5 @@ command5:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master070_IP]:"/var/log/univention/{join,setup,listener}.log" .
 command6:
  halt -p
-
+files:
+examples/jenkins/utils/utils.sh /root/
