Adapted autotest-07* for UCS 4.0 (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51431 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
@@ -41,38 +41,26 @@ profile:
  packages_install="univention-s4-connector univention-samba4"
  packages_remove=""
 command1:
- echo -e "#!/bin/sh\nroute del default ; route add default gw 10.210.216.13" >>/etc/network/if-up.d/z_route
- chmod +x /etc/network/if-up.d/z_route
- /etc/network/if-up.d/z_route
- sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
+ utils.sh; basic_setup
 command2:
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- /usr/lib/univention-system-setup/scripts/setup-join.sh
- ucr set apache2/startsite='ucs-overview/' # Bug #31682
- for srv in univention-management-console-server univention-management-console-web-server apache2; do invoke-rc.d $srv restart; done
+ utils.sh; upgrade_to_latest
+ utils.sh; run_setup_join
 command3:
  # None
 command4:
- # Update to UCS 3.2
- ucr set repository/online/server=testing.univention.de
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- univention-run-join-scripts
+ # Upgrade to UCS 4.0
+ . utils.sh; upgrade_to_testing
+ . utils.sh; run_join_scripts
 command5:
  reboot
  LOCAL sleep 60
- #wait for the reboot
- for((i=0;i<100;i++)); do pidof apache2 && break; sleep 1; done
+ . utils.sh; wait_for_reboot
 command6:
  # None
 command7:
  halt -p
+files:
+ examples/jenkins/utils/utils.sh /root/
 
 [backup073]
 profile:
@@ -86,40 +74,22 @@ profile:
  packages_remove=""
  nameserver=[master073_IP]
 command1:
- echo -e "#!/bin/sh\nroute del default ; route add default gw 10.210.216.13" >>/etc/network/if-up.d/z_route
- chmod +x /etc/network/if-up.d/z_route
- /etc/network/if-up.d/z_route
- sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
+ . utils.sh; basic_setup
 command2:
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
+ . utils.sh; upgrade_to_latest
 command3:
- ucr set nameserver1=$(cat /var/cache/univention-system-setup/profile | sed -ne 's|^nameserver=||p')
- echo -n "univention" >/tmp/univention
- /usr/lib/univention-system-setup/scripts/setup-join.sh --dcaccount Administrator --password_file /tmp/univention
- ucr set apache2/startsite='ucs-overview/' # Bug #31682
- for srv in univention-management-console-server univention-management-console-web-server apache2; do invoke-rc.d $srv restart; done
+ . utils.sh; run_setup_join_on_non_master
 command4:
- # Update to UCS 3.2
- ucr set repository/online/server=testing.univention.de
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- univention-run-join-scripts --dcaccount Administrator --password_file /tmp/univention
+ # Upgrade to UCS 4.0
+ . utils.sh; upgrade_to_testing
+ . utils.sh; run_join_scripts
 command5:
- ucr set repository/online/unmaintained=yes
- univention-install --yes ucs-test
- ucr set repository/online/unmaintained=no
+ . utils.sh; install_ucs_test
  reboot
  LOCAL sleep 60
- #wait for the reboot
- for((i=0;i<100;i++)); do pidof apache2 && break; sleep 1; done
+ . utils.sh; wait_for_reboot
 command6:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log"
+ . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:"/var/log/univention/{join,setup,listener}.log" .
@@ -127,4 +97,5 @@ command6:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup073_IP]:/var/log/samba/* .
 command7:
  halt -p
-
+files:
+ examples/jenkins/utils/utils.sh /root/
