--- a/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
@@ -47,7 +47,7 @@ command2:
  . utils.sh; upgrade_to_latest
  . utils.sh; run_setup_join
 command3:
-# Update to UCS 4.0
+# Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
 command4:
