Adapted autotest-07* from upgrade_to_latest to upgrade_to_latest_errata (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51433 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
@@ -44,7 +44,7 @@ command1:
  . utils.sh; basic_setup
 command2:
 # ucr set repository/online/component/errata3.1-1-test=true repository/online/component/errata3.1-1-test/unmaintained=true
- . utils.sh; upgrade_to_latest
+ . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
 command3:
 # Upgrade to UCS 4.0
