--- a/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
@@ -43,7 +43,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_latest
+ . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
 command3:
  # Update to UCS 4.0
