Fixed some typos (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51434 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
@@ -41,10 +41,10 @@ profile:
  packages_install="univention-s4-connector univention-samba4"
  packages_remove=""
 command1:
- utils.sh; basic_setup
+ . utils.sh; basic_setup
 command2:
- utils.sh; upgrade_to_latest_errata
- utils.sh; run_setup_join
+ . utils.sh; upgrade_to_latest_errata
+ . utils.sh; run_setup_join
 command3:
  # None
 command4:
