--- a/test/ucs-ec2-tools/examples/jenkins/autotest-075-update-3.2-to-4.0-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-075-update-3.2-to-4.0-slave-s4.cfg
@@ -89,7 +89,7 @@ command5:
  LOCAL sleep 60
  . utils.sh; wait_for_reboot
 command6:
- . util.sh; run_tests
+ . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave075_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave075_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave075_IP]:"/var/log/univention/{join,setup,listener}.log" .
