--- a/test/ucs-ec2-tools/examples/jenkins/autotest-107-app-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-107-app-member-s4.cfg
@@ -44,7 +44,7 @@ command1:
  . utils.sh; basic_setup
 command2:
 # Upgrade to UCS 4.0
- . util.sh; upgrade_to_testing
+ . utils.sh; upgrade_to_testing
 # . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
 command3:
