--- a/test/ucs-ec2-tools/examples/jenkins/autotest-110-update-3.2-to-4.0-appupdate-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-110-update-3.2-to-4.0-appupdate-master-s3.cfg
@@ -70,4 +70,4 @@ command8:
 files:
  ~/ec2/license/autotest110.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
-
+ examples/jenkins/utils/utils.sh /root/
