Removed ssh -i statements from autotest-110- (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51438 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-110-update-3.2-to-4.0-appupdate-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-110-update-3.2-to-4.0-appupdate-master-s3.cfg
@@ -49,14 +49,13 @@ command3:
  univention-license-import /root/autotest110.ldif
  . utils.sh; switch_to_test_app_center
  . utils.sh; install_apps APP_ID
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master110_IP] 'for app in APP_ID; do univention-add-app -a --latest $app; done'
  . utils.sh; run_join_scripts
 command4:
  # Upgrade to UCS 4.0
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
 command5:
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master110_IP] 'for app in APP_ID; do univention-add-app -a --latest $app; done'
+ . utils.sh; install_apps_master_packages
  . utils.sh; run_join_scripts
 command6:
  . utils.sh; install_apps_test_packages
