--- a/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
@@ -18,4 +18,6 @@ desc: |
  * Added new option to share-userquota policy: Reapply quota on every login
  * The listener module for UDM extensions is now capable of processing
    extensions with given SVGZ image as UMC icon.
-bug: [33120, 34037, 34200, 34250, 28630, 33174, 35062]
+ * Add possibility to mark UDM properties as readonly when UCS is part of an
+   Active Directory domain.
+bug: [33120, 34037, 34200, 34250, 28630, 33174, 35062, 34092]
