--- a/doc/errata/staging/2014-05-22-univention-management-console-module-udm.yaml
+++ b/doc/errata/staging/2014-05-22-univention-management-console-module-udm.yaml
@@ -2,11 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-management-console-module-udm
-fix: 4.0.97-23.447.201406111551
+fix: 4.0.97-24.448.201407030903
 version: [2]
 desc: |
   This update fixes the following issues:
   * Upon opening a non-existent LDAP object an error message is shown instead of a traceback.
   * The property that is used to in the first column of the grid ("Name") is
     now configurable via UCR
-bug: [34246, 34200]
+  * Some UDM attributes are shown as readonly if the domain is part of an Active Directory Domain
+  * Display a warning in Active Directory Mode before creating objects which are not synchronized back to AD.
+bug: [34246, 34200, 34092, 34093]
