--- a/test/ucs-ec2-tools/examples/jenkins/autotest-110-update-3.2-to-4.0-appupdate-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-110-update-3.2-to-4.0-appupdate-master-s3.cfg
@@ -55,10 +55,10 @@ command4:
  . utils.sh; upgrade_to_testing
  . utils.sh; run_join_scripts
 command5:
- . utils.sh; install_apps_master_packages
+ . utils.sh; install_apps_master_packages APP_ID
  . utils.sh; run_join_scripts
 command6:
- . utils.sh; install_apps_test_packages
+ . utils.sh; install_apps_test_packages APP_ID
 command7:
  . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master110_IP]:ucs-test.log .
