--- a/doc/errata/staging/2014-05-15-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-05-15-univention-s4-connector.yaml
@@ -2,11 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-s4-connector
-fix: 8.0.33-47.473.201405151521
+fix: 8.0.33-47.475.201407031009
 version: [2]
 desc: |
   This update fixes the following issues:
   * The entryUUID of deleted objects in OpenLDAP is now saved to a
     local cache. This will prevent a recreation of deleted objects.
   * The synchronization has been changed to a diff based algorithm.
-bug: [32263,33621]
+  * In some cases a removed group membership was not synchronized
+    from OpenLDAP to Samba 4 in write mode.
+bug: [32263,33621,35238]
