* univention/testing/license_client.py: a tool to issue licenses for     testing environments (Bug #35205)   * debian/control: added 'python-argparse' to 'ucs-test-framework'
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51520 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/control
+++ b/test/ucs-test/debian/control
@@ -26,6 +26,7 @@ Architecture: all
 Depends: univention-config,
  python,
  python-yaml,
+ python-argparse,
  ucs-test-modules-all | ucs-test-module,
  dpkg-dev,
  debhelper,
