* examples/jenkins/autotest-*.cfg: copy the ~/ec2/license/license.secret     file to access the license shop from autotest envs (Bug #35205)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51523 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-092-backup-s3.cfg
@@ -59,6 +59,7 @@ files:
  ~/ec2/license/autotest092.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [backup092]
 profile:
@@ -92,4 +93,5 @@ command6:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
