--- a/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
@@ -60,6 +60,7 @@ files:
  ~/ec2/license/autotest093.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [backup093]
 profile:
@@ -96,4 +97,5 @@ command6:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
