--- a/test/ucs-ec2-tools/examples/jenkins/autotest-125-appupdate-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-125-appupdate-slave-s4.cfg
@@ -64,6 +64,7 @@ files:
  ~/ec2/license/autotest125.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [slave125]
 profile:
@@ -102,4 +103,5 @@ command8:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
