--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-memberserver.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only-with-memberserver.cfg
@@ -67,6 +67,7 @@ files:
  ~/ec2/license/autotest204.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2042]
@@ -104,6 +105,7 @@ command8:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [member2043]
@@ -148,4 +150,5 @@ command8:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
