--- a/test/ucs-ec2-tools/examples/jenkins/autotest-205-ucsschool-update-3.1-to-3.2-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-205-ucsschool-update-3.1-to-3.2-singleserver-s3.cfg
@@ -72,5 +72,6 @@ files:
  ~/ec2/license/autotest205.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
