--- a/test/ucs-ec2-tools/examples/jenkins/autotest-097-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-097-member-s4.cfg
@@ -59,6 +59,7 @@ files:
  ~/ec2/license/autotest097.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [member097]
 profile:
@@ -92,4 +93,5 @@ command6:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
