--- a/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
@@ -61,6 +61,7 @@ files:
  ~/ec2/license/autotest103.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [backup103]
 profile:
@@ -98,4 +99,5 @@ command7:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
