--- a/test/ucs-ec2-tools/examples/jenkins/autotest-123-appupdate-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-123-appupdate-backup-s4.cfg
@@ -64,6 +64,7 @@ files:
  ~/ec2/license/autotest123.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [backup123]
 profile:
@@ -104,4 +105,5 @@ command8:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
