--- a/test/ucs-ec2-tools/examples/jenkins/autotest-126-appupdate-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-126-appupdate-member-s3.cfg
@@ -64,6 +64,7 @@ files:
  ~/ec2/license/autotest126.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
 [member126]
 profile:
@@ -102,4 +103,5 @@ command8:
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
 
