--- a/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
@@ -70,5 +70,6 @@ files:
  ~/ec2/license/autotest200.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
