--- a/test/ucs-ec2-tools/examples/jenkins/autotest-201-ucsschool-singleserver-s4-with-slave.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-201-ucsschool-singleserver-s4-with-slave.cfg
@@ -68,6 +68,7 @@ files:
  ~/ec2/license/autotest201.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave202]
@@ -111,4 +112,5 @@ command7:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
