--- a/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-207-ucsschool-update-3.1-to-3.2-multiserver-s3.cfg
@@ -69,6 +69,7 @@ files:
  ~/ec2/license/autotest207.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2071]
@@ -108,6 +109,7 @@ command9:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2072]
@@ -151,4 +153,5 @@ command9:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
