--- a/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
@@ -69,6 +69,7 @@ files:
  ~/ec2/license/autotest209.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2091]
@@ -108,6 +109,7 @@ command9:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2092]
@@ -151,4 +153,5 @@ command9:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/license/license.secret /etc/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
