--- a/doc/errata/staging/2014-05-15-univention-s4-connector.yaml
+++ b/doc/errata/staging/2014-05-15-univention-s4-connector.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-s4-connector
-fix: 8.0.33-47.475.201407031009
+fix: 8.0.33-49.477.201407070811
 version: [2]
 desc: |
   This update fixes the following issues:
@@ -11,4 +11,6 @@ desc: |
   * The synchronization has been changed to a diff based algorithm.
   * In some cases a removed group membership was not synchronized
     from OpenLDAP to Samba 4 in write mode.
-bug: [32263,33621,35238]
+  * Restart bind9 instead of samba4 if the ldap/master can't be
+    resolved.
+bug: [32263,33621,35238,34865]
