--- a/doc/errata/staging/2014-07-03-univention-ad-connector.yaml
+++ b/doc/errata/staging/2014-07-03-univention-ad-connector.yaml
@@ -9,4 +9,6 @@ desc: |
   * Support for the ad/member mode has been added.
   * In some cases a removed group membership was not synchronized
     from OpenLDAP to Samba 4 in write mode.
-bug: [35091,35234]
+  * The AD certificate chain is no longer checked if there is no 
+    root certificate configured.
+bug: [35091,35234,35253]
