--- a/doc/errata/staging/2014-06-18-univention-updater.yaml
+++ b/doc/errata/staging/2014-06-18-univention-updater.yaml
@@ -8,7 +8,7 @@ desc: |
   This update fixes serveral issues:
   * The local UCR variable uuid/license is now removed if the key ID is missing
     in the UCS license.
-  * univention-add-app no longer registers a link in the UCS startsite and
+  * univention-add-app no longer registers a link on the UCS startsite and
     removes the component again if called with --master (just like the App
     Center module)
   * The component installation status is now transferred via apt-get user agent.
