--- a/doc/errata/staging/2014-05-26-univention-management-console-frontend.yaml
+++ b/doc/errata/staging/2014-05-26-univention-management-console-frontend.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-management-console-frontend
-fix: 3.0.152-36.835.201407031523
+fix: 3.0.152-37.836.201407081300
 version: [2]
 desc: |
   This update fixes the following issues:
@@ -15,4 +15,5 @@ desc: |
     domaincontroller backup, the UMC entry in the UCS overview page will no longer
     consider the UMC a domain administration tool, as the domain wide modules are only
     available on master and backup systems.
-bug: [34965, 34243, 34317, 33615]
+  * A timeout problem in the univention-management-console-web-server has been fixed.
+bug: [34965, 34243, 34317, 33615, 35052]
