--- a/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-06-11-univention-directory-manager-modules.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-directory-manager-modules
-fix: 9.0.76-12.1211.201407071324
+fix: 9.0.76-13.1212.201407081520
 version: [2]
 desc: |
  This update fixes several issues:
@@ -18,4 +18,6 @@ desc: |
  * Added new option to share-userquota policy: Reapply quota on every login
  * Add possibility to mark UDM properties as readonly when UCS is part of an
    Active Directory domain.
-bug: [33120, 34037, 34200, 34250, 28630, 33174, 34092]
+ * The script "proof_uniqueMembers" will no more crash on empty uniqueMember
+   attributes.
+bug: [33120, 34037, 34200, 34250, 28630, 33174, 34092, 33030]
