--- a/doc/errata/staging/2014-06-17-univention-samba4.yaml
+++ b/doc/errata/staging/2014-06-17-univention-samba4.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-samba4
-fix: 3.0.39-25.579.201406240909
+fix: 3.0.39-26.580.201407081550
 version: [2]
 desc: |
     This updates fixes the following issues in univention-samba4:
@@ -14,4 +14,5 @@ desc: |
     * The univention-samba4 join script now always cleans up the samba
       private directory before the join and if the samba4 join fails, the
       join is aborted .
-bug: [35137, 34422]
+    * A typo in univention-samba4-backup has been fixed.
+bug: [35137, 34422, 35084]
