--- a/doc/errata/staging/2014-05-30-univention-management-console.yaml
+++ b/doc/errata/staging/2014-05-30-univention-management-console.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-2
 src: univention-management-console
-fix: 6.0.24-15.790.201407031531
+fix: 6.0.24-16.791.201407081642
 version: [2]
 desc: |
   This update fixes the following issues:
@@ -10,4 +10,5 @@ desc: |
   * Changes of system clock (e.g. due to NTP updates) will not make UMC processes die by timeout anymore.
   * It is now possible for UMC modules to provide a user friendly error message when initialization failed.
   * The UMC server won't die if it gets a special kind of operationsets
-bug: [34723, 34243, 34105, 25196]
+  * The error handling of requests have been improoved.
+bug: [34723, 34243, 34105, 25196, 34244]
