Bug #25196: formatting and typos in YAML file
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51665 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-05-30-univention-management-console.yaml
+++ b/doc/errata/staging/2014-05-30-univention-management-console.yaml
@@ -6,9 +6,13 @@ fix: 6.0.24-16.791.201407081642
 version: [2]
 desc: |
   This update fixes the following issues:
-  * The internal cache of UMC modules in the UMC Server is now invalidated before they are requested.
-  * Changes of system clock (e.g. due to NTP updates) will not make UMC processes die by timeout anymore.
-  * It is now possible for UMC modules to provide a user friendly error message when initialization failed.
-  * The UMC server won't die if it gets a special kind of operationsets
-  * The error handling of requests have been improoved.
+  * The internal cache of UMC modules in the UMC Server is now invalidated
+    before they are requested.
+  * Changes of system clock (e.g. due to NTP updates) will not make UMC
+    processes die by timeout anymore.
+  * It is now possible for UMC modules to provide a user friendly error message
+    when initialization failed.
+  * The UMC server parses operation set strings more carefully now to avoid
+    server crashes.
+  * The error handling of requests have been improved.
 bug: [34723, 34243, 34105, 25196, 34244]
