Bug #34624 test: Disable re-join
Disable re-join because it is a major change for all subsequent tests.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51690 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-074-update-3.1-to-3.2-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-074-update-3.1-to-3.2-slave-s3.cfg
@@ -111,18 +111,18 @@ command4:
  univention-upgrade --noninteractive --ignoreterm --ignoressh
  univention-run-join-scripts --dcaccount Administrator --password_file /tmp/univention
 command5:
- ucr set repository/online/unmaintained=yes
- univention-install --yes ucs-test
- ucr set repository/online/unmaintained=no
+ . utils.sh; install_ucs_test
  reboot
  LOCAL sleep 60
  #wait for the reboot
  for((i=0;i<100;i++)); do pidof apache2 && break; sleep 1; done
 command6:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log"
+ . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave074_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave074_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave074_IP]:"/var/log/univention/{join,setup,listener}.log" .
 command7:
  halt -p
+files:
+ examples/jenkins/utils/utils.sh /root/
 
