--- a/test/ucs-ec2-tools/examples/jenkins/autotest-116-update-3.1-to-3.2-appupdate-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-116-update-3.1-to-3.2-appupdate-member-s3.cfg
@@ -133,7 +133,7 @@ command7:
  for app in APP_ID; do univention-install --yes ucs-test-$app || true; done
  ucr set repository/online/unmaintained=no
 command8:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log" -r apptest
+ . utils.sh; run_tests -r apptest
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member116_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member116_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member116_IP]:"/var/log/univention/{join,setup,listener}.log" .
@@ -141,4 +141,5 @@ command9:
  halt -p
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
