--- a/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-500.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-500.cfg
@@ -62,7 +62,7 @@ command6:
  univention-install --yes ucs-test-import-performance
  ucr set repository/online/unmaintained=no
 command7:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log" -r import500
+ . utils.sh; run_tests -r import500
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master30_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master30_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master30_IP]:"/var/log/univention/{join,setup,listener}.log" .
