--- a/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-65000.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-65000.cfg
@@ -73,7 +73,7 @@ command6:
  /etc/init.d/univention-directory-listener restart
  /etc/init.d/slapd restart
 command7:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log" -r import65000
+ . utils.sh; run_tests -r import65000
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master65_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master65_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master65_IP]:"/var/log/univention/{join,setup,listener}.log" .
