--- a/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.1-to-3.2-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.1-to-3.2-master-s3.cfg
@@ -64,18 +64,18 @@ command3:
  univention-upgrade --noninteractive --ignoreterm --ignoressh
  univention-run-join-scripts
 command4:
- ucr set repository/online/unmaintained=yes
- univention-install --yes ucs-test
- ucr set repository/online/unmaintained=no
+ . utils.sh; install_ucs_test
  reboot
  LOCAL sleep 60
  #wait for the reboot
  for((i=0;i<100;i++)); do pidof apache2 && break; sleep 1; done
 command5:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log"
+ . utils.sh; run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master070_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master070_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master070_IP]:"/var/log/univention/{join,setup,listener}.log" .
 command6:
  halt -p
+files:
+ examples/jenkins/utils/utils.sh /root/
 
