--- a/test/ucs-ec2-tools/examples/jenkins/autotest-111-update-3.1-to-3.2-appupdate-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-111-update-3.1-to-3.2-appupdate-master-s4.cfg
@@ -78,7 +78,7 @@ command6:
  for app in APP_ID; do univention-install --yes ucs-test-$app || true; done
  ucr set repository/online/unmaintained=no
 command7:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log" -r apptest
+ . utils.sh; run_tests -r apptest
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master111_IP]:"/var/log/univention/{join,setup,listener}.log" .
@@ -89,4 +89,5 @@ command8:
 files:
  ~/ec2/license/autotest111.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
