--- a/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-30000.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-30000.cfg
@@ -77,7 +77,7 @@ command7:
  echo "udm users/user modify --dn \"\$2\" --set primaryGroup=\"cn=Domain Users,cn=groups,dc=school30000,dc=local\"" >>/usr/share/ucs-school-import/hooks/user_create_post.d/primarygroup
  chmod +x /usr/share/ucs-school-import/hooks/user_create_post.d/primarygroup
 command8:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log" -r import30000
+ . utils.sh; run_tests -r import30000
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master30_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master30_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master30_IP]:"/var/log/univention/{join,setup,listener}.log" .
