--- a/services/univention-printserver/debian/control
+++ b/services/univention-printserver/debian/control
@@ -5,8 +5,8 @@ Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>> 7),
  univention-config-dev,
  univention-management-console-dev,
- python2.6-dev,
- python-support,
+ python-all,
+ python-support (>= 0.90),
  ucslint-univention,
 Standards-Version: 3.8.2
 XS-Python-Version: 2.6
