--- a/services/univention-printserver/debian/rules
+++ b/services/univention-printserver/debian/rules
@@ -3,7 +3,7 @@
 # Univention Print Server
 #  rules file for the debian package
 #
-# Copyright 2004-2013 Univention GmbH
+# Copyright 2004-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -64,4 +64,4 @@ override_dh_fixperms:
 	dh_fixperms
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
