added dh $@ --with 'python_support' (Bug #35147)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51703 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-pkgdb/debian/rules
+++ b/services/univention-pkgdb/debian/rules
@@ -69,4 +69,4 @@ override_dh_fixperms:
 	chmod +x debian/univention-pkgdb/usr/lib/univention-directory-listener/system/pkgdb.py
 
 %:
-	dh $@
+	dh $@ --with 'python_support'
