Bug #35145: Start UCS 4.0 development
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51716 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-services/debian/control
+++ b/management/univention-management-console-module-services/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  univention-management-console-dev,
  python-all
 Standards-Version: 3.5.2
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-management-console-module-services
 Architecture: all
