--- a/management/univention-management-console-module-lib/debian/control
+++ b/management/univention-management-console-module-lib/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-all,
  ucslint-univention
 Standards-Version: 3.7.2
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-management-console-module-lib
 Architecture: all
