--- a/management/univention-management-console-module-mrtg/debian/control
+++ b/management/univention-management-console-module-mrtg/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  univention-management-console-dev,
  python-all
 Standards-Version: 3.7.2
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-management-console-module-mrtg
 Architecture: all
