fixed version string in iso name (Bug #35167)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51739 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-xen-gplpv/debian/rules
+++ b/virtualization/univention-xen-gplpv/debian/rules
@@ -38,7 +38,7 @@ binary binary-arch binary-indep build build-arch build-indep clean install insta
 	dh $@
 
 override_dh_auto_build:
-	genisoimage -J -R -o "Xen Windows drivers (gplpv ${BUILD_NUMBER}).iso" msi-packages
+	genisoimage -J -R -o "Xen Windows drivers (gplpv ${GPLPV_VERSION}).iso" msi-packages
 
 get-orig-source: win-pvdrivers win-pvdrivers/build_number.bat win-pvdrivers/sign_config.bat
 .PHONY: win-pvdrivers
