--- a/doc/errata/staging/2014-07-11.univention-xen-gplpv.yaml
+++ b/doc/errata/staging/2014-07-11.univention-xen-gplpv.yaml
@@ -5,6 +5,6 @@ src: univention-xen-gplpv
 fix: 1:1.0.1092-3.11.201407111319
 version: [2]
 desc: |
-  * James Harper's XEN GPLPV drivers have been updated to
+  * The Xen GPLPV drivers have been updated to
     version 1.0.1092.
 bug: [35167]
