forked from branches/ucs-3.2/ucs-3.2-2/management/univention-ldap Bug #35143
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51749 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/control
+++ b/management/univention-ldap/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>> 7),
 Package: univention-ldap-server
 Architecture: all
 Recommends: univention-virtual-machine-manager-schema
-Pre-Depends: slapd (>> 2.4.23-7),
+Pre-Depends: slapd (>= 2.4.35-1.162.201407020834),
  univention-ldap-client,
 Depends: ${misc:Depends},
  univention-base-files,
